--- a/NTTourGuide/Base.lproj/Main.storyboard
+++ b/NTTourGuide/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3c8-jD-jP8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3c8-jD-jP8">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
         <!--Menu-->
@@ -795,6 +796,24 @@
             </objects>
             <point key="canvasLocation" x="-871" y="-574"/>
         </scene>
+        <!--Item-->
+        <scene sceneID="V4L-gP-MH2">
+            <objects>
+                <navigationController id="t1q-6m-6n6" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Sp7-Ly-aCk"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="SSB-pq-hSr">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="hjh-Nr-Ua4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nUv-dm-LHh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1286" y="44"/>
+        </scene>
         <!--Home-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
@@ -807,24 +826,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dtp-Xi-saE">
-                                <rect key="frame" x="8" y="392" width="37" height="30"/>
-                                <state key="normal" backgroundImage="FacebookLogo.png">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="fbButtonTap:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="hZi-3Q-yuB"/>
-                                </connections>
-                            </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="YwD-mb-hD0">
-                                <rect key="frame" x="0.0" y="304" width="320" height="80"/>
+                                <rect key="frame" x="0.0" y="335" width="320" height="253"/>
                                 <color key="backgroundColor" red="0.1544537201" green="0.33666606929999998" blue="0.34513099749999998" alpha="0.5" colorSpace="calibratedRGB"/>
                                 <string key="text">If you live for adventure and love the great outdoors, you've found your spiritual home in the Northern Territory. Walk, swim, sail or fly to experience the region's dramatic landscapes, diverse wildlife and ancient heritage, from vast red deserts, hidden waterholes and outback stations to plunging gorges, rocky outcrops and pristine white beaches.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BQc-9L-avx">
-                                <rect key="frame" x="272" y="392" width="32" height="30"/>
+                                <rect key="frame" x="12" y="72" width="32" height="30"/>
                                 <state key="normal" backgroundImage="webSimple.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -833,12 +843,22 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="NT_Map.png" translatesAutoresizingMaskIntoConstraints="NO" id="d5k-0A-Zws">
-                                <rect key="frame" x="55" y="-33" width="211" height="343"/>
+                                <rect key="frame" x="58" y="8" width="205" height="335"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dtp-Xi-saE">
+                                <rect key="frame" x="10" y="116" width="37" height="30"/>
+                                <state key="normal" backgroundImage="FacebookLogo.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="fbButtonTap:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="hZi-3Q-yuB"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.21792470689999999" green="0.45618299579999999" blue="0.52870501889999999" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="Home Filled-32.png" id="OUn-pY-CUm"/>
+                    <navigationItem key="navigationItem" id="dyO-mY-OX4"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="fb" destination="Dtp-Xi-saE" id="iY9-zV-85E"/>
@@ -861,7 +881,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y7v-zn-oyY">
-                                <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                 <color key="backgroundColor" red="0.21792470689999999" green="0.45618299579999999" blue="0.52870501889999999" alpha="1" colorSpace="calibratedRGB"/>
                             </webView>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1ku-NB-lQc">
@@ -897,14 +917,14 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="viewControllers" id="Irv-Q2-o6T"/>
+                        <segue destination="t1q-6m-6n6" kind="relationship" relationship="viewControllers" id="RI6-x1-bdH"/>
                         <segue destination="K8F-z9-XvK" kind="relationship" relationship="viewControllers" id="hZ7-pf-LNU"/>
                         <segue destination="ULl-ot-oFe" kind="relationship" relationship="viewControllers" id="iH9-ww-dLs"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N7O-qE-1DO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1201" y="61"/>
+            <point key="canvasLocation" x="-1648" y="44"/>
         </scene>
     </scenes>
     <resources>
