--- a/NTTourGuide/Base.lproj/Main.storyboard
+++ b/NTTourGuide/Base.lproj/Main.storyboard
@@ -251,24 +251,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Feedback: " translatesAutoresizingMaskIntoConstraints="NO" id="Jda-4A-9kX">
-                                <rect key="frame" x="0.0" y="115" width="320" height="188"/>
-                                <color key="backgroundColor" red="0.1544537201" green="0.33666606929999998" blue="0.34513099749999998" alpha="0.5" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dQI-L2-qRM">
-                                <rect key="frame" x="135" y="321" width="50" height="45"/>
+                                <rect key="frame" x="135" y="281" width="50" height="45"/>
                                 <state key="normal" backgroundImage="Sent Filled-50.png"/>
                                 <connections>
                                     <action selector="emailButton:" destination="9gh-BQ-7Rl" eventType="touchUpInside" id="M5R-LB-CCV"/>
                                 </connections>
                             </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" keyboardDismissMode="onDrag" text="Feedback:" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Yln-ny-eYV">
+                                <rect key="frame" x="0.0" y="90" width="320" height="178"/>
+                                <color key="backgroundColor" red="0.1544537201" green="0.33666606929999998" blue="0.34513099749999998" alpha="0.5" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VOG-g6-XTX">
+                                <rect key="frame" x="0.0" y="334" width="320" height="84"/>
+                                <string key="text">Your feedback is important to us, whether you have a complaint, a suggestion or a compliment. We value all feedback, because it helps us improve our services.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" red="0.21792470689999999" green="0.45618299579999999" blue="0.52870501889999999" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <connections>
-                        <outlet property="emailText" destination="Jda-4A-9kX" id="EDi-rD-1z3"/>
+                        <outlet property="emailText" destination="Yln-ny-eYV" id="sDx-Be-mfO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fit-kh-pdX" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -893,10 +899,10 @@
             </objects>
             <point key="canvasLocation" x="-314" y="-486"/>
         </scene>
-        <!--Website-->
+        <!--Web View Controller-->
         <scene sceneID="ANc-l0-VOZ">
             <objects>
-                <viewController title="Website" id="hGw-5n-a34" customClass="WebViewController" sceneMemberID="viewController">
+                <viewController id="hGw-5n-a34" customClass="WebViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="LQz-Rh-eKC"/>
                         <viewControllerLayoutGuide type="bottom" id="YnY-yT-aLv"/>
